# popgrid

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: country.py  inspect_country.py
popgrid/: __init__.py  core.py  data.py  exceptions.py  geometry.py  grid.py  render.py
tests/: test_core.py  test_data.py  test_geometry.py  test_grid.py
