[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "popgrid"
version = "0.1.0"
description = "Tiled grid maps for Python — land area and population cartograms"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Josep Ferrer", email = "rfeers@gmail.com"},
]
keywords = ["dataviz", "maps", "population", "cartography", "geopandas", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "requests>=2.28",
    "pycountry>=22.0",
    "pyproj>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "black", "ipykernel"]

[project.urls]
Homepage = "https://databites.tech"
Repository = "https://github.com/databites-tech/popgrid"
Issues = "https://github.com/databites-tech/popgrid/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["popgrid*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
